# elan_zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md
boards/elan/32f967_dv/: 32f967_dv.dts  32f967_dv.overlay.conf  32f967_dv.yaml  32f967_dv_defconfig
cmake/: compat_overlays.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/bbram/: CMakeLists.txt  Kconfig  bbram_em32.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.elan  Kconfig.em32  clock_control_em32_ahb.c  clock_control_em32_apb.c
drivers/crypto/: CMakeLists.txt  Kconfig  crypto_em32_sha.c
drivers/entropy/: CMakeLists.txt  Kconfig  Kconfig.elan  entropy_em32_trng.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.em32  flash_em32.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.em32  gpio_em32.c  gpio_em32.h
drivers/hwinfo/: CMakeLists.txt  Kconfig  Kconfig.elan  hwinfo_em32.c
drivers/pinctrl/: CMakeLists.txt  Kconfig.em32  pinctrl_em32.c
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.em32  pwm_em32.c  pwm_em32.h
drivers/rtc/: CMakeLists.txt  Kconfig  Kconfig.em32  rtc_em32.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.elan  Kconfig.em32  uart_elandev.c  uart_em32.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.elan  spi_elandev_spi2.c
drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.em32  timer_em32.c
drivers/usb/: CMakeLists.txt  Kconfig
drivers/usb/udc/: CMakeLists.txt  Kconfig.elan  Kconfig.em32  soc_usbctrl.h  udc_e967.h  udc_elan_elandev.c  udc_em32.c
drivers/watchdog/: CMakeLists.txt  Kconfig.em32  wdt_em32.c
dts/arm/elan/: 32f967_dv_priv.dtsi  em32fxxx.dtsi
dts/bindings/bbram/: elan,em32-bbram.yaml
dts/bindings/clock/: elan,em32-ahb-v2.yaml  elan,em32-apb-v2.yaml
dts/bindings/crypto/: elan,em32-crypto.yaml
dts/bindings/dma/: elan,em32f967-dma.yaml
dts/bindings/entropy/: elan,em32-trng.yaml
dts/bindings/flash_controller/: elan,em32-flash-controller.yaml
dts/bindings/hwinfo/: elan,em32-uid.yaml
dts/bindings/pinctrl/: elan,em32-pinctrl.yaml
dts/bindings/pwm/: elan,em32-pwm.yaml
dts/bindings/rtc/: elan,em32-rtc.yaml  elan,em32f902-rtc.yaml
dts/bindings/serial/: elan,elandev-uart.yaml  elan,em32-uart.yaml
dts/bindings/spi/: elan,elandev-spi2.yaml
dts/bindings/timer/: elan,em32-timer.yaml
dts/bindings/usb/: elan,elandev-usbd.yaml  elan,em32-usbd.yaml
dts/bindings/watchdog/: elan,em32-wdt.yaml  elan,em32f902-wdt.yaml
include/zephyr/drivers/: dma.h
include/zephyr/drivers/clock_control/: clock_control_em32_ahb.h  clock_control_em32_apb.h
include/zephyr/drivers/flash/: flash_em32.h
include/zephyr/drivers/hwinfo/: hwinfo_em32.h
include/zephyr/drivers/pinctrl/: pinctrl_em32.h
include/zephyr/dt-bindings/clock/: em32_clock_upstream.h
include/zephyr/dt-bindings/gpio/: em32-gpio.h
include/zephyr/dt-bindings/pinctrl/: em32f967-pinctrl.h
samples/blinky/: CMakeLists.txt  prj.conf
samples/blinky/src/: main.c
samples/button/: CMakeLists.txt  prj.conf
samples/button/src/: main.c
samples/elan_all_wkup_pin/: 32f967_dv.overlay  CMakeLists.txt  prj.conf
samples/elan_all_wkup_pin/src/: main.c
samples/elan_bbram/: CMakeLists.txt  README.md  prj.conf
samples/elan_bbram/src/: main.c
samples/elan_hp_gaston/: 32f967_dv.overlay  CMakeLists.txt  prj.conf  sample.yaml
samples/elan_hp_gaston/src/: main.c
samples/elan_pa14/: CMakeLists.txt
samples/elan_pa14/src/: main.c
samples/elan_pa14o_pb8i_pa15i/: 32f967_dv.overlay  CMakeLists.txt  prj.conf
samples/elan_pa14o_pb8i_pa15i/src/: main.c
samples/elan_pb_pwm/: 32f967_dv.overlay  CMakeLists.txt  prj.conf
samples/elan_pb_pwm/src/: main.c
samples/elan_pdsw2/: CMakeLists.txt  README.md
samples/elan_pdsw2/src/: main.c
samples/elan_pdsw4/: 32f967_dv.overlay  CMakeLists.txt  README.md  prj.conf
samples/elan_pdsw4/src/: main.c
samples/elan_pw_saving/: 32f967_dv.overlay  CMakeLists.txt  prj.conf
samples/elan_pw_saving/src/: main.c
samples/elan_pwm/: CMakeLists.txt  prj.conf
samples/elan_pwm/src/: main.c
samples/elan_pwm_pa3_hd/: 32f967_dv.overlay  CMakeLists.txt  prj.conf
samples/elan_pwm_pa3_hd/src/: main.c
samples/elan_rtc/: CMakeLists.txt  README.md  prj.conf
samples/elan_rtc/boards/: elan_32f967_dv.overlay
samples/elan_rtc/src/: main.c
samples/elan_set_mask/: 32f967_dv.overlay  CMakeLists.txt  prj.conf
samples/elan_set_mask/src/: main.c
samples/elan_sha/: CMakeLists.txt  prj.conf
samples/elan_sha/src/: main.c
samples/elan_spi_loopback/: CMakeLists.txt  README.rst  prj.conf
samples/elan_spi_loopback/src/: main.c
samples/elan_timer/: 32f967_dv.overlay  CMakeLists.txt  prj.conf  sample.yaml
samples/elan_timer/src/: main.c
samples/elan_trng/: CMakeLists.txt  prj.conf
samples/elan_trng/src/: main.c
samples/elan_wdt/: CMakeLists.txt  README.md  prj.conf
samples/elan_wdt/src/: main.c
samples/elanspi/: CMakeLists.txt  prj.conf
samples/elanspi/src/: main.c
samples/flash_test/: CMakeLists.txt  prj.conf
samples/flash_test/src/: main.c
samples/hwinfo_test/: CMakeLists.txt  prj.conf
samples/hwinfo_test/src/: main.c
samples/testusb/: CMakeLists.txt
samples/testusb/src/: main.c
soc/elan/em32f967/: CMakeLists.txt  Kconfig.soc  elan_em32.h  pinctrl_soc.h  power.c  soc.c  soc.h  soc_967.h  soc_clkctrl.h  soc_infoctrl.h  soc_miscctrl.h  soc_pm.h  soc_pwrctrl.h  soc_sysctrl.h  soc_tmp.c
zephyr/: module.yml
